--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           "Number of correct reversed words: " + matchCount;
 
         document.getElementById("notMatch").innerText =
-          "Number of correct reversed words: " + notMatchCount;
+          "Number of correct reversed words: " + notMacthCount;
       }
 
       // Generate and display the random string when the page loads
